--- a/index.html
+++ b/index.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
-
 <html lang="en">
-
-  <head>
-
+<head>
     <meta charset="utf-8" />
-
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
     <title>FIRSTLIGHT APARTMENT</title>
 
-  </head>
+    <!-- Link to multiple CSS files -->
+    <link rel="stylesheet" href="index.css" /> <!-- Global styles -->
+    <link rel="stylesheet" href="search homes.css" /> <!-- General styles -->
+    <link rel="stylesheet" href="header.css" /> <!-- Styles for header -->
+    <link rel="stylesheet" href="footer.css" /> <!-- Styles for footer -->
+    <link rel="stylesheet" href="about.css" /> <!-- Styles for about page -->
+    <link rel="stylesheet" href="landing.css" /> <!-- Styles for landing page -->
 
-  <body>
-
+    <!-- Optional: Link to favicon -->
+    <link rel="icon" href="Login form.css" />
+</head>
+<body>
     <div id="root"></div>
-
-  </body>
-
-</html> 
+    
+    <!-- The script tag for your bundled JavaScript will be injected here by React Scripts -->
+    <script src="index.js"></script> <!-- Placeholder for the bundled JS file -->
+</body>
+</html>
