--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="header.css" /> <!-- Styles for header -->
     <link rel="stylesheet" href="footer.css" /> <!-- Styles for footer -->
     <link rel="stylesheet" href="about.css" /> <!-- Styles for about page -->
-    <link rel="stylesheet" href="landing.css" /> <!-- Styles for landing page -->
+    <link rel="stylesheet" href="landing page.css" /> <!-- Styles for landing page -->
 
     <!-- Optional: Link to favicon -->
     <link rel="icon" href="Login form.css" />
