--- a/index.html
+++ b/index.html
@@ -7,18 +7,33 @@
 
     <!-- Link to multiple CSS files -->
     <link rel="stylesheet" href="index.css" /> <!-- Global styles -->
-    <link rel="stylesheet" href="search homes.css" /> <!-- General styles -->
-    <link rel="stylesheet" href="header.css" /> <!-- Styles for header -->
-    <link rel="stylesheet" href="footer.css" /> <!-- Styles for footer -->
+    <link rel="stylesheet" href="search-homes.css" /> <!-- Styles for search homes -->
     <link rel="stylesheet" href="about.css" /> <!-- Styles for about page -->
-    <link rel="stylesheet" href="landing page.css" /> <!-- Styles for landing page -->
+    <link rel="stylesheet" href="landing-page.css" /> <!-- Styles for landing page -->
+    <link rel="stylesheet" href="prime-location-card.css" /> <!-- Styles for prime location cards -->
+    <link rel="stylesheet" href="login-form.css" /> <!-- Styles for login form -->
+    <link rel="stylesheet" href="navbar.css" /> <!-- Styles for the navigation bar -->
 
     <!-- Optional: Link to favicon -->
-    <link rel="icon" href="Login form.css" />
+    <link rel="icon" href="favicon.ico" /> <!-- Ensure the correct path to your favicon -->
+
 </head>
 <body>
+    <!-- Navigation Bar -->
+    <nav class="navbar">
+        <div class="navbar-container">
+            <h1 class="navbar-title">FIRSTLIGHT APARTMENT</h1>
+            <ul class="navbar-links">
+                <li><a href="index.html">Landing Page</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="search-homes.html">Search Homes</a></li>
+                <li><a href="prime-locations.html">Prime Locations</a></li>
+            </ul>
+        </div>
+    </nav>
+
     <div id="root"></div>
-    
+
     <!-- The script tag for your bundled JavaScript will be injected here by React Scripts -->
     <script src="index.js"></script> <!-- Placeholder for the bundled JS file -->
 </body>
